# auctions-api-haskell

./: .editorconfig  .travis.yml  README.md  auction-site.cabal  cabal.project.freeze  stack.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: haskell.yml
app/: Api.hs  Main.hs  Types.hs
app/Auctions/: Api.hs  Types.hs
src/: ApiJson.hs  Domain.hs  Either.hs  Lib.hs  Money.hs  Parser.hs
src/AuctionSite/: Aeson.hs  Domain.hs  Money.hs  Worker.hs
src/AuctionSite/Domain/: Auctions.hs  Bids.hs  Commands.hs  Core.hs  Prelude.hs  SingleSealedBid.hs  States.hs  TimedAscending.hs
src/AuctionSite/Persistence/: JsonFile.hs
src/AuctionSite/Web/: API.hs  App.hs  Jwt.hs  Types.hs
src/Domain/: Auction.hs  Auctions.hs  Bid.hs  Bids.hs  Commands.hs  Prelude.hs  SingleSealedBid.hs  State.hs  States.hs  TimedAscending.hs
src/Persistence/: JsonFile.hs  Redis.hs
test/: ApiSerializationSpec.hs  ApiSpec.hs  AuctionStateSpec.hs  AuctionStateSpecs.hs  BlindAuctionStateSpec.hs  EnglishAuctionSpec.hs  EnglishAuctionStateSpec.hs  SampleData.hs  SerializationSpec.hs  Spec.hs  VickreyAuctionSpec.hs  VickreyAuctionStateSpec.hs
