name:                auction-site
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wallymathieu/auction-site-haskell
license:             MIT
license-file:        LICENSE
author:              Oskar Gewalli
maintainer:          oskar@gewalli.se
copyright:           2017 Oskar Gewalli
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:      AuctionSite.Money
                      , AuctionSite.Domain
                      , AuctionSite.Domain.Auctions
                      , AuctionSite.Domain.Bids
                      , AuctionSite.Domain.Core
                      , AuctionSite.Domain.SingleSealedBid, AuctionSite.Domain.TimedAscending, AuctionSite.Domain.States
                      , AuctionSite.Domain.Commands
                      , AuctionSite.Persistence.JsonFile
                      , AuctionSite.Web.Types
                      , AuctionSite.Web.App
  ghc-options:        -Wall -fwarn-tabs
  other-modules:
  build-depends:       base >= 4.9 && < 5
                      , containers >= 0.5 && <0.6
                      , aeson >= 1.3
                      , Spock
                      , http-types >= 0.12
                      , aeson
                      , text
                      , time
                      , bytestring
                      , stm >= 2.5
  default-language:    Haskell2010

executable auction-site-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Spock >= 0.13
                     , http-types >= 0.12
                     , auction-site
                     , aeson
                     , text
  default-language:    Haskell2010

test-suite auction-site-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:        -Wall -fwarn-tabs
  build-depends:       base
                     , Spock
                     , auction-site
                     , aeson
                     , time
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , vector
  other-modules:       SampleData
                     , AuctionStateSpecs
                     , EnglishAuctionStateSpec
                     , VickreyAuctionStateSpec
                     , BlindAuctionStateSpec
                     , ApiSerializationSpec
                     , ApiSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N 
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wallymathieu/auction-site-haskell
