name:                auction-site
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wallymathieu/auction-site-haskell
license:             MIT
license-file:        LICENSE
author:              Oskar Gewalli
maintainer:          oskar@gewalli.se
copyright:           2017 Oskar Gewalli
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:      AuctionSite.Money
                      , AuctionSite.Aeson
                      , AuctionSite.Domain
                      , AuctionSite.Domain.Auctions
                      , AuctionSite.Domain.Bids
                      , AuctionSite.Domain.Core
                      , AuctionSite.Domain.SingleSealedBid, AuctionSite.Domain.TimedAscending, AuctionSite.Domain.States
                      , AuctionSite.Domain.Commands
                      , AuctionSite.Persistence.JsonFile
                      , AuctionSite.Web.Types
                      , AuctionSite.Web.App
  ghc-options:        -Wall -fwarn-tabs
  other-modules:
  build-depends:       base
                      , containers
                      , aeson
                      , Spock
                      , http-types
                      , aeson
                      , text
                      , time
                      , bytestring
                      , parsec
                      , stm
  default-language:    Haskell2010

executable auction-site-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Spock
                     , http-types
                     , auction-site
                     , aeson
                     , text
  default-language:    Haskell2010

test-suite auction-site-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:        -Wall -fwarn-tabs -Wno-missing-signatures
  build-depends:       base
                     , Spock
                     , auction-site
                     , aeson
                     , time
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , vector
  other-modules:       SampleData
                     , AuctionStateSpecs
                     , EnglishAuctionSpec
                     , VickreyAuctionSpec
                     , BlindAuctionStateSpec
                     , ApiSerializationSpec
                     , ApiSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N 
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wallymathieu/auction-site-haskell
